# phirst-blood

./: .clang-tidy  .gitignore  CMakeLists.txt  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: cpp-development.agent.md  deployment.agent.md  python-interface.agent.md  testing.agent.md
.github/instructions/: cpp-development.instructions.md  deployment.instructions.md  python-interface.instructions.md  testing.instructions.md
.github/workflows/: build-alpaka.yml  build-cuda.yml  build-hip.yml  build-kokkos.yml  build-serial.yml  build-sycl.yml  build.yml  compile-check-alpaka.yml  compile-check-cuda.yml  compile-check-hip.yml  compile-check-kokkos.yml  compile-check-sycl.yml  compile-check.yml  python-alpaka.yml  python-cuda.yml  python-kokkos.yml  python-serial.yml
bench/: benchmark.sh
cmake/: PhirstDetect.cmake  PhirstInstall.cmake  PhirstIntegrand.cmake  integrand_wrapper_template.cpp.in  phirstConfig.cmake.in
cmake/backend/: Alpaka.cmake  CUDA.cmake  HIP.cmake  Kokkos.cmake  SYCL.cmake  Serial.cmake
deploy/: README.md  architectures.yml
examples/: drell_yan.cpp  eggholder.cpp
examples/custom_integrand/: CMakeLists.txt  README.md  my_integrand.cpp
examples/downstream/: CMakeLists.txt  main.cpp
gpu-testing/: benchmark.sh
gpu-testing/alpaka/include/rambo/: phase_space.hpp
gpu-testing/base/include/rambo/: phase_space.hpp
gpu-testing/one/: CMakeLists.txt  README.md
gpu-testing/one/include/rambo/: integrands.hpp  integrator.hpp  phase_space.hpp  rambo.hpp
gpu-testing/one/include/rambo/backend/: parallel.hpp
gpu-testing/one/include/rambo/pal/: backend.hpp  math.hpp  parallel.hpp  random.hpp
include/contrib/HEPUtils/: MathUtils.h  Utils.h  Vectors.h
include/phirst/: integrands.hpp  integrator.hpp  phase_space.hpp  phirst.hpp  rambo.hpp  vegas.hpp
include/phirst/backend/: config.hpp  math.hpp  numba_bridge.cuh  parallel.hpp  parallel_alpaka.hpp  parallel_cuda.hpp  parallel_hip.hpp  parallel_kokkos.hpp  parallel_serial.hpp  parallel_sycl.hpp  random.hpp
legacy/gpu-testing/cuda/include/rambo/: phase_space.cuh
legacy/gpu-testing/kokkos/include/rambo/: phase_space.hpp
legacy/gpu-testing/one/: main.cpp
legacy/gpu-testing/one/include/rambo/: rambo.hpp
legacy/gpu-testing/one/include/rambo/backend/: math.hpp
legacy/gpu-testing/sycl/include/rambo/: integrator.hpp  phase_space.hpp
legacy/rambo_lib/: CMakeLists.txt
python/: README.md
python/phirst/: __init__.py  cpp_integrand.py  numba_integrand.py
python/src/: _phirst.cpp  numba_bridge.cu  numba_launcher.cu
python/tests/: test_cpp_integrand.py  test_numba_integrand.py  test_phirst.py
tests/: CMakeLists.txt  test_integrands.cpp  test_integrator.cpp  test_phase_space.cpp  test_phirst.cpp  test_utils.hpp  test_vegas.cpp
